css/layout/map-layout.css
html,
body {
	height: 100%;
}

#map {
	width: 100%;
	height: 100%;
}

#search {
	position: absolute;
	top: 10px;
	left: 0;
	width: 320px;
	max-height: 95vh;
	display: flex;
	flex-direction: column;
	gap: 5px;
	overflow-y: auto;
	padding: 10px;
	border-radius: 0 var(--radius-sm) var(--radius-sm) 0;
	background: #fff;
	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
	z-index: var(--z-map-ui);
}

#toggle-button {
	left: 320px;
}

@media (max-width: 640px) {
	#search {
		max-height: calc(140dvh - 20px);
	}

	#overview {
		max-height: calc(100dvh - 320px);
	}
}

